force-app/main/default/objects/GarbageCollector__mdt/GarbageCollector__mdt.object-meta.xml
<CustomObject>
    <label>Garbage Collector</label>
    <pluralLabel>Garbage Collectors</pluralLabel>
</CustomObject>