force-app/main/default/objects/GarbageCollector__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates whether the current garbage collector is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>