force-app/main/default/objects/GarbageCollector__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <inlineHelpText>The fully qualified name of an Apex Class which contains custom logic for querying records to be deleted. This apex class must implement the GarbageCollector.QueryLocator interface.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>