force-app/main/default/objects/GarbageCollector__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText
	>The maximum number of records that can be deleted in a single batch. All records will be processed in an asynchronous context.</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>