force-app/main/default/objects/GarbageCollector__mdt/fields/HardDelete__c.field-meta.xml
<CustomField>
    <fullName>HardDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
	>When checked, records deleted by the garbage collector will skip the recycle bin, permanently deleting them right away.</inlineHelpText>
    <label>Hard Delete</label>
    <type>Checkbox</type>
</CustomField>