force-app/main/default/objects/GarbageCollector__mdt/fields/QueryWhereClause__c.field-meta.xml
<CustomField>
    <fullName>QueryWhereClause__c</fullName>
    <defaultValue>&quot;LastModifiedDate &lt; LAST_N_DAYS:30&quot;</defaultValue>
    <inlineHelpText>The WHERE Clause of a SOQL Query that defines which records should be deleted, in a &quot;Query Based&quot; Garbage Collector.

This result will be injected into the &quot;WHERE&quot; clause, as demonstrated below:

SELECT Id
FROM MyObject__c
WHERE {{QueryWhereClause__c}}</inlineHelpText>
    <label>Query Where Clause</label>
    <length>19000</length>
    <type>LongTextArea</type>
</CustomField>