force-app/main/default/objects/GarbageCollector__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <inlineHelpText>The API Name of a Salesforce Object to be deleted. Examples of valid values include:

- &quot;Account&quot;
- &quot;My_Custom_Object__c&quot;
- &quot;namespace__My_Packaged_Object__c&quot;</inlineHelpText>
    <label>SObjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Garbage Collectors</relationshipLabel>
    <relationshipName>GarbageCollectors</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>