force-app/main/default/objects/GarbageCollector__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Query Based&quot;</defaultValue>
    <inlineHelpText>Indicates how the garbage collector will retrieve records to be deleted:

- Apex Based: Use an apex class that implements the &quot;GarbageCollector.Worker&quot; interface to define custom query logic. Choose this option when a simple SOQL query is not enough to capture your requirements.

- Query Based: A SOQL query is built using the provided &quot;SObjectType&quot; and &quot;Query Where Clause&quot;. This option should cover most garbage collection use cases.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Based</fullName>
                <default>true</default>
                <label>Apex Based</label>
            </value>
            <value>
                <fullName>Query Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>