force-app/main/default/objects/GarbageCollector__mdt/validationRules/NoQueryWhereClauseIfApexBased.validationRule-meta.xml
<ValidationRule>
    <fullName>NoQueryWhereClauseIfApexBased</fullName>
    <active>true</active>
    <description>If Type = &quot;Apex Based&quot;, then Query Where Clause should be blank.</description>
    <errorConditionFormula>NOT(ISBLANK(QueryWhereClause__c)) &amp;&amp; ISPICKVAL(Type__c, &quot;Apex Based&quot;)</errorConditionFormula>
    <errorDisplayField>QueryWhereClause__c</errorDisplayField>
    <errorMessage>Query Where Clause should be blank for &quot;Apex Based&quot; Garbage Collectors</errorMessage>
</ValidationRule>