force-app/main/default/objects/GarbageCollector__mdt/validationRules/RequireApexClassNameIfApexBased.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireApexClassNameIfApexBased</fullName>
    <active>true</active>
    <description>If Type = &quot;Apex Based&quot;, then Apex Class Name is required.</description>
    <errorConditionFormula>ISBLANK(ApexClassName__c) &amp;&amp; ISPICKVAL(Type__c, &quot;Apex Based&quot;)</errorConditionFormula>
    <errorDisplayField>ApexClassName__c</errorDisplayField>
    <errorMessage>Apex Class Name is required for &quot;Apex Based&quot; Garbage Collectors</errorMessage>
</ValidationRule>