force-app/main/default/objects/GarbageCollector__mdt/validationRules/RequireQueryWhereClauseIfQueryBased.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireQueryWhereClauseIfQueryBased</fullName>
    <active>true</active>
    <description>If Type = &quot;Query Based&quot;, then Query Where Clause is required.</description>
    <errorConditionFormula>ISBLANK(QueryWhereClause__c) &amp;&amp; ISPICKVAL(Type__c, &quot;Query Based&quot;)</errorConditionFormula>
    <errorDisplayField>QueryWhereClause__c</errorDisplayField>
    <errorMessage>Query Where Clause is required for &quot;Query Based&quot; Garbage Collectors</errorMessage>
</ValidationRule>