force-app/main/default/objects/GarbageCollector__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>SObjectType__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>HardDelete__c</columns>
    <columns>BatchSize__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>